Poll application clean.

--- a/src/core/spaces/templates/spaces/space_form.html
+++ b/src/core/spaces/templates/spaces/space_form.html
@@ -254,6 +254,7 @@ tempalte shows the help_text automatically if found in the data models.
                         <label class="checkbox inline">{{ form.mod_news }}{{ form.mod_news.label }}</label>
                         <label class="checkbox inline">{{ form.mod_cal }}{{ form.mod_cal.label }}</label>
                         <label class="checkbox inline">{{ form.mod_docs }}{{ form.mod_docs.label }}</label>
+                        <label class="checkbox inline">{{ form.mod_polls }}{{ form.mod_polls.label }}</label>
                     </div>
                 </div>
         
