--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -8,6 +8,25 @@
 */
 
 /* HTML TAGS DEFINITION */
+
+.add-row.btn.primary.small {
+  visibility:hidden;
+}
+
+.poll_info {
+  height: 30px;
+}
+
+.poll_detail {
+  margin-top: 10px;
+  margin-left: 50px;
+}
+.poll_question {
+  color: #006DCC;
+}
+.votes {
+  visibility:hidden;
+}
 body {
 	background: #FAFAFA;
 	padding: 0;
