--- a/src/apps/ecidadania/voting/templates/voting/poll_form.html
+++ b/src/apps/ecidadania/voting/templates/voting/poll_form.html
@@ -28,7 +28,6 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
 {% endblock %}
 
 {% block extrajs %}
-<<<<<<< HEAD
     <script src="{{ STATIC_URL }}/js/jquery.formset.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}/js/poll_choice.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -37,8 +36,6 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             $('#ajaxform tbody tr').formset();
         })
     </script>
-=======
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
 {% endblock %}
 
 {% block space %}
@@ -59,11 +56,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
             <h3>{% trans "Create new poll" %}</h3>
         {% endif %}
 
-<<<<<<< HEAD
         <form class="form-horizontal" id="ajaxform" enctype="" action="" method="post">{% csrf_token %}
-=======
-        <form class="form-horizontal"  enctype="" action="" method="post">{% csrf_token %}
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
 
             {% if form.non_field_errors %}
                 {% for error in form.non_field_errors %}
@@ -83,7 +76,7 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
                     {% if form.question.errors %}
                     <p class="help-block">
                         {% for error in form.question.errors %}
-                        {{ error|escape }}
+                            {{ error|escape }}
                         {% endfor %}
                     </p>
                     {% endif %}
@@ -96,87 +89,74 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
                     <div class="input-append">
                         {{ form.poll_tags }}
                         {% if form.poll_tags.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.poll_tags.help_text }}"><i class="icon-question-sign"></i></a></span>
+                            <span class="add-on"><a href="#" rel="tooltip" title="{{ form.poll_tags.help_text }}"><i class="icon-question-sign"></i></a></span>
                         {% endif %}
                     </div>
                     {% if form.poll_tags.errors %}
                     <p class="help-block">
                         {% for error in form.poll_tags.errors %}
-                        {{ error|escape }}
+                            {{ error|escape }}
                         {% endfor %}
                     </p>
                     {% endif %}
                 </div>
             </div>
-<<<<<<< HEAD
-                <span class="btn btn-small btn-primary" onclick="addChoice()">{% trans "Add " %}</span>
-                <table id="debate{{ pollid }}" cellspacing="0" cellpadding="0" border="0">
-                    <thead>
-                        <tr id="debate{{ pollid }}-headers">
-=======
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
+
+            <span class="btn btn-small btn-primary" onclick="addChoice()">{% trans "Add " %}</span>
+            <table id="debate{{ pollid }}" cellspacing="0" cellpadding="0" border="0">
+                <thead>
+                    <tr id="debate{{ pollid }}-headers">
                     {{ choiceform.management_form }}
                     {% for choice in choiceform %}
-            <div class="control-group {% if choice.choice_text.errors %}error{% endif %}">
-                <label>{{ choice.choice_text.label }}</label>
-                <div class="controls">
-                    <div class="input-append">
-<<<<<<< HEAD
-                        <th id="poll-vcriteria{{ poll_id }}" class="criteria-vtitle">
-
-=======
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
-                        {{ choice.choice_text }}
-                        {% if choice.choice_text.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ choice.choice_text.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if choice.choice_text.errors %}
-                    <p class="help-block">
-                        {% for error in choice.choice_text.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
-<<<<<<< HEAD
-                </th>
-                </div>
-            </div>
-        </tr>
-        </thead>
-</table>
-=======
-                </div>
-            </div>
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
-<div class="votes"><div class="control-group {% if choice.votes.errors %}error{% endif %}">
-                <label>{{ choice.votes.label }}</label>
-                <div class="controls">
-                    <div class="input-append">
-                        {{ choice.votes }}
-                        {% if choice.votes.help_text %}
+                        <div class="control-group {% if choice.choice_text.errors %}error{% endif %}">
+                        <label>{{ choice.choice_text.label }}</label>
+                        <div class="controls">
+                            <div class="input-append">
+                                <th id="poll-vcriteria{{ poll_id }}" class="criteria-vtitle">
+                                    {{ choice.choice_text }}
+                                    {% if choice.choice_text.help_text %}
+                                        <span class="add-on"><a href="#" rel="tooltip" title="{{ choice.choice_text.help_text }}"><i class="icon-question-sign"></i></a></span>
+                                    {% endif %}
+                                    {% if choice.choice_text.errors %}
+                                        <p class="help-block">
+                                            {% for error in choice.choice_text.errors %}
+                                                {{ error|escape }}
+                                            {% endfor %}
+                                        </p>
+                                    {% endif %}
+                                </th>
+                            </div>
+                        </div>
+                    </tr>
+                    {% endfor %}
+                </thead>
+            </table>
+        </div>
+    </div>
+    <div class="votes">
+        <div class="control-group {% if choice.votes.errors %}error{% endif %}">
+            <label>{{ choice.votes.label }}</label>
+            <div class="controls">
+                <div class="input-append">
+                    {{ choice.votes }}
+                    {% if choice.votes.help_text %}
                         <span class="add-on"><a href="#" rel="tooltip" title="{{ choice.votes.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if choice.votes.errors %}
+                    {% endif %}
+                </div>
+                {% if choice.votes.errors %}
                     <p class="help-block">
                         {% for error in choice.votes.errors %}
-                        {{ error|escape }}
+                            {{ error|escape }}
                         {% endfor %}
                     </p>
-                    {% endif %}
-                </div>
-        </div></div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
-            {% endfor %}
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 3b3ac388b7a57e17a6e718f847c0cef55dbd788d
-            {% if request.user.is_staff %}
-            <hr>
-            <h3>{% trans "Staff members options" %}</h3>
+    {% if request.user.is_staff %}
+        <hr>
+        <h3>{% trans "Staff members options" %}</h3>
 
             <div class="control-group {% if form.author.errors %}error{% endif%}">
                 <label>{{ form.author.label }}</label>
