Minor fixes in views. Fixed some m2m forms

--- a/src/core/spaces/templates/spaces/event_form.html
+++ b/src/core/spaces/templates/spaces/event_form.html
@@ -65,7 +65,7 @@ automatically if found in the data models.
                 <label>{{ form.event_date.label }}</label>
                 <div class="controls">
                     <div class="input-append">
-                        <input type="text" name="event_date" id="datepicker" class="hasDatePicker">
+                        <input type="text" name="event_date" id="datepicker" value="{{ form.event_date.value }}" class="hasDatePicker">
                         {% if form.event_date.help_text %}
                             <span class="add-on"><a href="#" rel="tooltip" title="{{ form.event_date.help_text }}"><i class="icon-question-sign"></i></a></span>
                         {% endif %}
@@ -137,6 +137,49 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
+
+            {% if user_is_admin %}
+                <hr>
+                <h3>{% trans "Staff members options" %}</h3>
+
+                <div class="control-group {% if form.space.errors %}error{% endif%}">
+                    <label>{{ form.space.label }}</label>
+                    <div class="controls">
+                        <div class="input-prepend">
+                            {{ form.space }}
+                            {% if form.space.help_text %}
+                                <span class="add-on"><a href="#" rel="tooltip" title="{{ form.space.help_text }}"><i class="icon-question-sign"></i></a></span>
+                            {% endif %}
+                        </div>
+                        {% if form.space.errors %}
+                            <p class="help-block">
+                                {% for error in form.space.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            </p>
+                        {% endif %}
+                    </div>
+                </div>
+
+                <div class="control-group {% if form.event_author.errors %}error{% endif%}">
+                   <label>{{ form.event_author.label }}</label>
+                    <div class="controls">
+                        <div class="input-prepend">
+                            {{ form.event_author }}
+                            {% if form.event_author.help_text %}
+                                <span class="add-on"><a href="#" rel="tooltip" title="{{ form.event_author.help_text }}"><i class="icon-question-sign"></i></a></span>
+                            {% endif %}
+                        </div>
+                        {% if form.event_author.errors %}
+                            <p class="help-block">
+                                {% for error in form.event_author.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            </p>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endif %}
 
             <hr />
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Cancel" %}</a>
