--- a/src/apps/ecidadania/voting/templates/voting/voting_form.html
+++ b/src/apps/ecidadania/voting/templates/voting/voting_form.html
@@ -7,7 +7,11 @@ This is a form to create a new poll. It uses poll_board.js file to add new choic
 {% endcomment %}
 
 {% block title %}
-        {% trans "Create new voting process" %}
+      {% if form.title.value %}
+        {% trans "Edit voting process" %} {{ form.title.value }}
+          {% else %}
+          {% trans "Create new voting process" %}
+          {% endif %}
 {% endblock %}
 
 
