template for proposal form field corrected

--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_add_fields.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_add_fields.html
@@ -2,12 +2,12 @@
 {% load i18n %}
 {% load wysiwyg %}
 
+{% comment %}
+This template shows the help_text automatically if found in the data models.
+{% endcomment %}
+
 {% block title %}
-    {% if form.title.value %}
-        {% trans "Edit proposal set" %} {{ form.title.value }}
-    {% else %}
-        {% trans "Adding form field to proposal form" %}
-    {% endif %}
+    {% trans "Add form field to proposal form" %}
 {% endblock %}
 
 {% block logo %}
@@ -26,8 +26,8 @@
 
 
 <div class="row">
-    <div class="span1">
-        <h3>{% trans "Add fields to proposal form" %}</h3>
+    <div class="span12">
+        <h3>{% trans "Add field to proposal form" %}</h3>
         <br />
         <form class="form-horizontal" action="" method="post">{% csrf_token %}
 
@@ -37,62 +37,60 @@
                 {% endfor %}
             {% endif %}
 
-        <div class="control-group {% if form.proposalset.errors %}error{% endif %}">
-            <label>{{ form.proposalset.label }}</label>
-            <div class="controls">
-                <div class="input-append" id="prop_set">
-                    {{ form.proposalset }}
-                    {% if form.proposalset.help_text %}
+            <div class="control-group {% if form.proposalset.errors %}error{% endif %}">
+                <label>{{ form.proposalset.label }}</label>
+                <div class="controls">
+                    <div class="input-append" id="prop_set">
+                        {{ form.proposalset }}
+                        {% if form.proposalset.help_text %}
                         <span class="add-on"><a href="#" rel="tooltip" title="{{ form.proposalset.help_text }}"><i class="icon-question-sign"></i></a></span>
-                    {% endif %}
-                </div>
-                {% if form.proposalset.errors %}
+                        {% endif %}
+                    </div>
+                    {% if form.proposalset.errors %}
                     <p class="help-block">
                         {% for error in form.proposalset.errors %}
-                            {{ error|escape }}
+                        {{ error|escape }}
                         {% endfor%}
                     </p>
-                {% endif %}
-            </div>
-        </div>
-
-        <div class="control-group {% if form.field_name.errors %}error{% endif %}">
-            <label>{{ form.field_name.label }}</label>
-            <div class="controls">
-                <div class="input-prepend">
-                    {{ form.field_name }}
-                    {% if form.field_name.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.field_name.help_text }}"><i class="icon-question-sign"></i></a></span>
                     {% endif %}
                 </div>
-                {% if form.field_name.errors %}
+            </div>
+            <div class="control-group {% if form.field_name.errors %}error{% endif %}">
+                <label>{{ form.field_name.label }}</label>
+                <div class="controls">
+                    <div class="input-prepend">
+                        {{ form.field_name }}
+                        {% if form.field_name.help_text %}
+                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.field_name.help_text }}"><i class="icon-question-sign"></i></a></span>
+                        {% endif %}
+                    </div>
+                    {% if form.field_name.errors %}
                     <p class="help-block">
                         {% for error in form.field_name.errors %}
-                            {{ error|escape }}
+                        {{ error|escape }}
                         {% endfor %}
                     </p>
-                {% endif %}
+                    {% endif %}
+                </div>
             </div>
-        </div>
-        <hr />
-        {% if prop_fields|length %}
+            <hr />
+            {% if prop_fields|length %}
             <h3>{% trans "Additional Fields for the Proposal form in this Proposal Set" %}</h3>
             <table border="1">
                 {% for f in prop_fields %}
-                    {% if forloop.counter == 1 %}
-                        <th>{{ f.proposalset }}</th>
-                        <tr><td>{{ f.field_name }}</td></tr>
-                    {% else %}
-                        <tr><td>{{ f.field_name }}</td></tr>
-                    {% endif %}
+                {% if forloop.counter == 1 %}
+                <th>{{ f.proposalset }}</th>
+                <tr><td>{{ f.field_name }}</td></tr>
+                {% else %}
+                <tr><td>{{ f.field_name }}</td></tr>
+                {% endif %}
                 {% endfor %}
             </table>
-        {% endif %}
-        
+            {% endif %}
 
         <hr />
         <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
-        <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Add' %}" />
+        <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Create' %}" />
         </form>
     </div>
 
