--- a/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
+++ b/src/apps/ecidadania/proposals/templates/proposals/proposal_form.html
@@ -81,7 +81,7 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-
+            {% if "latitude" in form_field %}
             <div class="control-group {% if form.latitude.errors %}error{% endif %}">
                 <label>{{ form.latitude.label }}</label>
                 <div class="controls">
@@ -98,7 +98,8 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-
+            {% endif %}
+            {% if "longitude" in form_field %}
             <div class="control-group {% if form.longitude.errors %}error{% endif %}">
                 <label>{{ form.longitude.label }}</label>
                 <div class="controls">
@@ -115,6 +116,8 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
+            {% endif %}
+            {% if "tags" in form_field %}
             <div class="control-group {% if form.tags.errors %}error{% endif %}">
                 <label>{{ form.tags.label }}</label>
                 <div class="controls">
@@ -131,7 +134,7 @@ automatically if found in the data models.
                     {% endif %}
                 </div>
             </div>
-
+            {% endif %}
             <hr />
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Go back" %}</a>
             <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Publish' %}" />
